--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "babel-core": "6.25.0",
