--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@shopify/polaris-icons": "6.15.0",
     "@shopify/react-form": "^2.5.5",
     "@shopify/react-testing": "5.1.3",
+    "@tinymce/tinymce-react": "^4.3.0",
     "@types/jest": "^29.5.1",
     "loader-utils": "3.2.1",
+    "openai": "^3.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1"
